test/testdata/functions/builtin/parse_number_non_string_error.lox
parseNumber([]); // error: expected parseNumber argument to be a 'string', got 'list'
